[metadata]
name = smileycoinLib-thth168
version = 0.1.1
author = Þröstur Almar Þrastarson, Helga Rún Hjartardóttir, Eyjólfur Brynjar Brynjólfsson
author_email = thth168@hi.is
description = A small smileycoin wrapper package to use smileycoin with python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thth168/smileyLib
project_urls =
    Bug Tracker = https://github.com/thth168/smileyLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src